--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                 <button style="border-radius: 20px; height: 30px; width: 150px; border: 0; outline: none;   background: #fc4a1a; /* fallback for old browsers */
   background: -webkit-linear-gradient(to bottom, #fc4a1a, #f7b733); /* Chrome 10-25, Safari 5.1-6 */
   background: linear-gradient(to bottom, #fc4a1a, #f7b733); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */ margin: 50px;">Enroll Now</button>
-                <button style="border-radius: 20px; background-color: white; border: 1px solid orange;">Learn More ➡</button>
+                <button style="border-radius: 20px; height: 30px; width: 150px; background-color: white; border: 1px solid orange;">Learn More ➡</button>
             </div>
         </div>
     </div>
