--- a/index.html
+++ b/index.html
@@ -23,25 +23,24 @@
     <nav>
         <img src="white.png" alt="" style="height: 30px; width: 150px; float: left; margin-left: 150px;">
         <ul>
-            <!-- <li><img src="white.png" alt="" style="height: 50px; width: 100px;"></li> -->
             <li>BookBank</li>
             <li>CodinShastra</li>
             <li>BookBank</li>
             <li>BookBank</li>
             <li>BookBank</li>
-            <li>We are hiring</li>
-            <li>Login</li>
-            <li>Signup ➡</li>
+            <li style=" padding-left: 5px; height: 30px; width: 150px; background-color: #ff7423; list-style:circle ; list-style-position: inside;">We are hiring</li>
+            <li>Log in</li>
+            <li style="height: 30px; width: 100px;padding-left: 15px; background-color: white; color: #ff7225;">Signup ➡</li>
         </ul>
     </nav>
     <div class="container" style="position: absolute; top: 190px; margin-left: 100px; color: white;  ">
         <div class="row">
             <div class="col-6">
-                <h1 style="font-weight: 700;">mxsmksxsxxmsmxlsxsl;xss <br>jsbjbcjkdsbkbskcjbssc</h1>
+                <h1 style="font-weight: 700;">Adopt advanced approach,<br>enhance your academics</h1>
                 <p>bcjdsbbcsjkbckjbsjkbckjbskbskjbbs <br>dcnjsdnjknckjsdncjknscns <br>jcnjdsnckjsdncjnsdjcnsdkjcndsc</p>
                 <br><br>
-                <input type="text" placeholder="Enter your email" style="background-color: #ff7225; border: 1px solid white;">
-                <button style="padding: 0;height: 30px; width: 150px; font-size: 18px;font-weight: 600; background-color: white ; color: #ff7225;">Enroll Now</button>
+                <input type="text" placeholder="Enter your email" style="padding-left: 5px; height: 29px; background-color: #ff7225; border: 1px solid white;">
+                <button style="margin: -5px;height: 30px; width: 150px;outline: none; font-size: 18px;font-weight: 600; background-color: white ; color: #ff7225;">Enroll Now</button>
             </div>
             <div class="col-6">
                 <img src="Group.png" alt="" style="height: 300px; width: 500px; margin-left: 150px;">
@@ -53,16 +52,16 @@
         <div class="row">
             <div class="col-4">
                 <div class="row">
-                    <div class="col-sm">
+                    <div class="col-sm" style=" height: 200px; width: 100px; text-align: center; padding-top: 32px; margin: 10px; border-radius: 10%; -webkit-box-shadow: 0 0 10px rgb(155, 155, 155);box-shadow: 0 0 10px rgb(155, 155, 155);">
                         <img src="icons8-delivery-scooter-100.png" alt="" srcset="">
                     </div>
-                    <div class="col-sm">
+                    <div class="col-sm in" style=" height: 200px; width: 100px; text-align: center; padding-top: 32px ; border-radius: 10px; margin: 10px; -webkit-box-shadow: 0 0 10px rgb(155, 155, 155);box-shadow: 0 0 10px rgb(155, 155, 155);">
                         <img src="icons8-backpack-100.png" alt="" srcset="">
                     </div>
-                    <div class="col-sm">
+                    <div class="col-sm in" style=" height: 200px; width: 100px; text-align: center; padding-top: 32px; border-radius: 10px;margin: 10px; -webkit-box-shadow: 0 0 10px rgb(65, 177, 241);box-shadow: 0 0 10px rgb(65, 177, 241);">
                         <img src="Group 69.png" alt="">
                     </div>
-                    <div class="col-sm">
+                    <div class="col-sm"style=" height: 200px; width: 100px; text-align: center; padding-top: 32px;border-radius: 10px;margin: 10px; -webkit-box-shadow: 0 0 10px rgb(155, 155, 155);box-shadow: 0 0 10px rgb(155, 155, 155);">
                         <img src="icons8-upload-link-document-100.png" alt="">
                     </div>
                </div>
@@ -73,8 +72,8 @@
                 <br><br><br>
                 <button style="border-radius: 20px; height: 30px; width: 150px; border: 0; outline: none;   background: #fc4a1a; /* fallback for old browsers */
   background: -webkit-linear-gradient(to bottom, #fc4a1a, #f7b733); /* Chrome 10-25, Safari 5.1-6 */
-  background: linear-gradient(to bottom, #fc4a1a, #f7b733); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */ margin: 50px;">Enroll Now</button>
-                <button style="border-radius: 20px; height: 30px; width: 150px; background-color: white; border: 1px solid orange;">Learn More ➡</button>
+  background: linear-gradient(to bottom, #fc4a1a, #f7b733); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */ margin: 30px;">Enroll Now</button>
+                <button style="border-radius: 20px;height: 30px; width: 150px;background-color: white; border: 1px solid orange;">Learn More ➡</button>
             </div>
         </div>
     </div>
