--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
         integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
         crossorigin="anonymous"></script>
+        <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+        <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script defer src="script.js"></script>
     <title>Document</title>
 </head>
@@ -35,14 +37,20 @@
     </nav>
     <div class="container" style="position: absolute; top: 190px; margin-left: 100px; color: white;  ">
         <div class="row">
-            <div class="col-6">
+            <div  data-aos="fade-right"
+     data-aos-anchor="#example-anchor"
+     data-aos-offset="500"
+     data-aos-duration="800" class="col-6">
                 <h1 style="font-weight: 700;">Adopt advanced approach,<br>enhance your academics</h1>
                 <p>bcjdsbbcsjkbckjbsjkbckjbskbskjbbs <br>dcnjsdnjknckjsdncjknscns <br>jcnjdsnckjsdncjnsdjcnsdkjcndsc</p>
                 <br><br>
                 <input type="text" placeholder="Enter your email" style="padding-left: 5px; height: 30px; background-color: #ff7225; border: 1px solid white;">
                 <button style="margin: -5px;height: 30px; width: 150px;outline: none; font-size: 18px;font-weight: 600; background-color: white ; color: #ff7225;">Enroll Now</button>
             </div>
-            <div class="col-6">
+            <div  data-aos="fade-left"
+     data-aos-anchor="#example-anchor"
+     data-aos-offset="500"
+     data-aos-duration="800" class="col-6">
                 <img src="Group.png" alt="" style="height: 300px; width: 500px; margin-left: 150px;">
             </div>
         </div>
@@ -52,30 +60,33 @@
         <div class="row">
             <div class="col-4">
                 <div class="row">
-                    <div class="col-sm" style=" height: 200px; width: 100px; text-align: center; padding-top: 32px; margin: 10px; border-radius: 10%; -webkit-box-shadow: 0 0 10px rgb(155, 155, 155);box-shadow: 0 0 10px rgb(155, 155, 155);">
+                    <div data-aos="fade-up" class="col-sm" style=" height: 200px; width: 200px; text-align: center; padding-top: 32px; margin: 10px; border-radius: 10%; -webkit-box-shadow: 0 0 10px rgb(155, 155, 155);box-shadow: 0 0 10px rgb(155, 155, 155);">
                         <img src="icons8-delivery-scooter-100.png" alt="" srcset="">
                     </div>
-                    <div class="col-sm in" style=" height: 200px; width: 100px; text-align: center; padding-top: 32px ; border-radius: 10px; margin: 10px; -webkit-box-shadow: 0 0 10px rgb(155, 155, 155);box-shadow: 0 0 10px rgb(155, 155, 155);">
+                    <div data-aos="fade-up" class="col-sm in" style=" height: 200px; width: 200px; text-align: center; padding-top: 32px ; border-radius: 10%; margin: 10px; -webkit-box-shadow: 0 0 10px rgb(155, 155, 155);box-shadow: 0 0 10px rgb(155, 155, 155);">
                         <img src="icons8-backpack-100.png" alt="" srcset="">
-                    </div>
-                    <div class="col-sm in" style=" height: 200px; width: 100px; text-align: center; padding-top: 32px; border-radius: 10px;margin: 10px; -webkit-box-shadow: 0 0 10px rgb(65, 177, 241);box-shadow: 0 0 10px rgb(65, 177, 241);">
+                    </div> <br>
+                    <div data-aos="fade-up" class="col-sm in" style=" height: 200px; width: 200px; text-align: center; padding-top: 32px; border-radius: 10%;margin: 10px; -webkit-box-shadow: 0 0 10px rgb(65, 177, 241);box-shadow: 0 0 10px rgb(65, 177, 241);">
                         <img src="Group 69.png" alt="">
                     </div>
-                    <div class="col-sm"style=" height: 200px; width: 100px; text-align: center; padding-top: 32px;border-radius: 10px;margin: 10px; -webkit-box-shadow: 0 0 10px rgb(155, 155, 155);box-shadow: 0 0 10px rgb(155, 155, 155);">
+                    <div data-aos="fade-up" class="col-sm"style=" height: 200px; width: 200px; text-align: center; padding-top: 32px;border-radius: 10%;margin: 10px; -webkit-box-shadow: 0 0 10px rgb(155, 155, 155);box-shadow: 0 0 10px rgb(155, 155, 155);">
                         <img src="icons8-upload-link-document-100.png" alt="">
                     </div>
                </div>
             </div>
-            <div class="col-8" style="padding-left: 350px;">
+            <div data-aos="fade-up" class="col-8" style="padding-left: 350px;">
                 <h1 style=" font-weight: 650; color: rgb(65, 177, 241);">Our Flagship Service <br>Bookbank</h1>
                 <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Doloremque voluptatem ea <br> ut nesciunt aut deserunt eligendi molestias quis repelle <br> ndus ex aperiam nisi quisquam rerum assumenda, vitae nost <br>  rum, sequi earum dolores.</p>
                 <br><br><br>
-                <button style="border-radius: 20px; height: 30px; width: 150px; border: 0; outline: none;   background: #fc4a1a; /* fallback for old browsers */
+                <button data-aos="fade-right" data-aos-duration="800" style="border-radius: 20px; height: 30px; width: 150px; border: 0; outline: none;   background: #fc4a1a; /* fallback for old browsers */
   background: -webkit-linear-gradient(to bottom, #fc4a1a, #f7b733); /* Chrome 10-25, Safari 5.1-6 */
   background: linear-gradient(to bottom, #fc4a1a, #f7b733); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */ margin: 30px;">Enroll Now</button>
-                <button style="border-radius: 20px;height: 30px; width: 150px;background-color: white; border: 1px solid orange;">Learn More ➡</button>
+                <button data-aos="fade-right" style="border-radius: 20px;height: 30px; width: 150px;background-color: white; border: 1px solid orange;">Learn More ➡</button>
             </div>
         </div>
     </div>
+    <script>
+        AOS.init();
+    </script>
 </body>
 </html>
