--- a/index.html
+++ b/index.html
@@ -18,6 +18,11 @@
         <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
         <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script defer src="script.js"></script>
+    <style>
+        #sign:hover{
+            background-color: hotpink;
+        }
+    </style>
     <title>Document</title>
 </head>
 <body">
@@ -32,7 +37,7 @@
             <li>BookBank</li>
             <li style=" padding-left: 5px; height: 30px; width: 150px; background-color: #ff7423; list-style:circle ; list-style-position: inside;">We are hiring</li>
             <li>Log in</li>
-            <li style="height: 30px; width: 100px;padding-left: 15px; background-color: white; color: #ff7225;">Signup ➡</li>
+            <li id="sign">Signup ➡</li>
         </ul>
     </nav>
     <div class="container" style="position: absolute; top: 190px; margin-left: 100px; color: white;  ">
@@ -60,16 +65,16 @@
         <div class="row">
             <div class="col-4">
                 <div class="row">
-                    <div data-aos="fade-up" class="col-sm" style=" height: 200px; width: 200px; text-align: center; padding-top: 32px; margin: 10px; border-radius: 10%; -webkit-box-shadow: 0 0 10px rgb(155, 155, 155);box-shadow: 0 0 10px rgb(155, 155, 155);">
+                    <div data-aos="fade-up" class="col-sm in">
                         <img src="icons8-delivery-scooter-100.png" alt="" srcset="">
                     </div>
-                    <div data-aos="fade-up" class="col-sm in" style=" height: 200px; width: 200px; text-align: center; padding-top: 32px ; border-radius: 10%; margin: 10px; -webkit-box-shadow: 0 0 10px rgb(155, 155, 155);box-shadow: 0 0 10px rgb(155, 155, 155);">
+                    <div data-aos="fade-up" class="col-sm in">
                         <img src="icons8-backpack-100.png" alt="" srcset="">
                     </div> <br>
-                    <div data-aos="fade-up" class="col-sm in" style=" height: 200px; width: 200px; text-align: center; padding-top: 32px; border-radius: 10%;margin: 10px; -webkit-box-shadow: 0 0 10px rgb(65, 177, 241);box-shadow: 0 0 10px rgb(65, 177, 241);">
+                    <div data-aos="fade-up" class="col-sm in">
                         <img src="Group 69.png" alt="">
                     </div>
-                    <div data-aos="fade-up" class="col-sm"style=" height: 200px; width: 200px; text-align: center; padding-top: 32px;border-radius: 10%;margin: 10px; -webkit-box-shadow: 0 0 10px rgb(155, 155, 155);box-shadow: 0 0 10px rgb(155, 155, 155);">
+                    <div data-aos="fade-up" class="col-sm in">
                         <img src="icons8-upload-link-document-100.png" alt="">
                     </div>
                </div>
